Fixed issue where the header text in the information section gets uncentered when the viewport is too small

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ h2 {
 	color: #F9FAF8;
 	font-size: 48px;
 	font-weight: extra-bold;
+	text-align: center;
 }
 
 .hero {
